<resources>
    <string name="app_name">Tallaba</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Courses</string>
    <string name="title_notifications">Timetable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_gpa">Gpa</string>
    <string name="title_more">More</string>
    <string name="title_menu_post">post</string>
    <string name="title_menu_profile">profile</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Comment">comment</string>
    <string name="Reply">reply</string>
    <string name="post_id">post id</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="file_manager">Flie Mananger</string>
    <string name="chat">Chat</string>
    <string name="book">Book</string>
    <string name="bus_timetable">Bus Timetable</string>
    <string name="new_post">New Post</string>
    <string name="Register">Register</string>
    <string name="login">Login</string>
    <string name="preference_file_key">Tallaba</string>
    <string name="userID">userid</string>
    <string name="Key_Image_conut">imagecount</string>
</resources>