<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_courses"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_Gpa"
        android:icon="@drawable/ic_school"
        android:title="@string/title_gpa" />
    <item
        android:id="@+id/navigation_More"
        android:title="@string/title_more"
        android:icon="@drawable/ic_more_horiz"/>

</menu>