<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.web.app.Tallaba.Fragment.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.web.app.Tallaba.Fragment.ui.Courses.CoursesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_courses" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.web.app.Tallaba.Fragment.ui.Timetable.TimetableFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_timetable" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_Gpa"
            app:destination="@id/navigation_Gpa" />
    </fragment>

    <fragment
        android:id="@+id/navigation_Gpa"
        android:name="com.web.app.Tallaba.Fragment.ui.Gpa.Gpa"
        android:label="Gpa"
        tools:layout="@layout/gpa_fragment" >
        <action
            android:id="@+id/action_navigation_Gpa_to_navigation_More"
            app:destination="@id/navigation_More" />
    </fragment>
    <fragment
        android:id="@+id/navigation_More"
        android:name="com.web.app.Tallaba.Fragment.ui.More.MoreFragment"
        android:label="More"
        tools:layout="@layout/more_fragment" />

</navigation>